# Atomic-Chat

./: .gitattributes  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: release-macos.yml  release.yml
core/: CONTRIBUTING.md
core/src/test/: setup.ts
docs/: README.md
extensions/assistant-extension/src/: index.ts
extensions/download-extension/src/: index.ts
extensions/llamacpp-extension/: settings.json
extensions/llamacpp-extension/src/: backend.ts  index.ts
extensions/mlx-extension/: package.json  settings.json
extensions/mlx-extension/src/: autoIncreaseCtx.test.ts  dflashRegistry.ts  index.ts
extensions/rag-extension/src/: index.ts
mlx-server/: README.md
scripts/: dev-windows.ps1  rename-dmg-volume.sh  setup-windows.ps1
scripts/concurrent-demo/: README.md  READ_ME_FIRST.txt  Start Demo.command  package.sh  pyproject.toml  run.sh
scripts/concurrent-demo/demo/: __init__.py  client.py  dashboard.py  main.py  metrics.py  scenarios.py  templates.py
scripts/concurrent-demo/website_build/: index.html
src-tauri/: Cargo.toml  sign.ps1  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: fix-llamacpp-dylibs.sh
src-tauri/src/: lib.rs
src-tauri/src/core/: mod.rs  setup.rs  state.rs  tray_status.rs
src-tauri/windows/: hooks.nsh
web-app/: package.json  vite.config.ts
web-app/src/: main.tsx
web-app/src/components/: RecommendedModelChip.tsx
web-app/src/constants/: localStorage.ts  models.ts  providers.ts  recommendedModelChip.ts
web-app/src/i18n/: setup.ts
(+159 files in other folders)
