[project]
name = "atomic-concurrent-demo"
version = "0.1.0"
description = "Concurrent multi-agent demo for Atomic-Chat's llama.cpp Concurrent Mode"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "rich>=13.9.4",
    "pydantic>=2.9.2",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
